gdg/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: # kpt-merge: /myexample
  name: gdg
  annotations:
    internal.kpt.dev/upstream-identifier: '|Namespace|default|myexample'
spec: {}
