gdg/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # kpt-merge: example/nginx
  labels:
    app: nginx
  name: nginx
  namespace: gdg
  annotations:
    internal.kpt.dev/upstream-identifier: 'apps|Deployment|example|nginx'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
